--- a/src/static/webcomponents/horizon/horizon.html
+++ b/src/static/webcomponents/horizon/horizon.html
@@ -94,7 +94,7 @@
         },
         domReady: function () {
           var self = this;
-          window.cockpit.on('plugin.navigationData.data', function (data) {
+          window.cockpit.rov.on('plugin.navigationData.data', function (data) {
             self.setData(data);
           });
           this.draw();
