--- a/src/ui-plugins/new-ui/public/depth.html
+++ b/src/ui-plugins/new-ui/public/depth.html
@@ -121,7 +121,7 @@
 
           setInterval(update, 1000);
 
-          window.cockpit.on('capestatus.navigationData', function (data) {
+          window.cockpit.rov.on('capestatus.navigationData', function (data) {
             if ('depth' in data) {
               currentDepth = data.depth;
             }
