--- a/src/static/webcomponents/horizon/horizon.html
+++ b/src/static/webcomponents/horizon/horizon.html
@@ -90,7 +90,7 @@
           $(window).resize(function (event) {
             ah.draw();
           });
-          this.draw();
+//          this.draw();
         },
         domReady: function () {
           var self = this;
