--- a/src/static/webcomponents/video/video.html
+++ b/src/static/webcomponents/video/video.html
@@ -131,7 +131,7 @@
               }
             });
 
-            window.cockpit.rov.on('capestatus.connection.connected', function() {
+            window.cockpit.rov.on('plugin.capestatus.connection.connected', function() {
               if (!isRendering) {
                 videoStarted();
                 startRendering();
