--- a/src/ui-plugins/new-ui/public/switches.html
+++ b/src/ui-plugins/new-ui/public/switches.html
@@ -59,14 +59,14 @@
       Polymer({
         lastPing: new Date(),
         switches: {
-          COM: {switchable: false, state: false, message: { enabled: 'capestatus.connection.connected', disabled: 'capestatus.connection.disconnected'} },
+          COM: {switchable: false, state: false, message: { enabled: 'plugin.capestatus.connection.connected', disabled: 'capestatus.connection.disconnected'} },
           GPD: {switchable: false, state: false, message: { enabled: 'plugin.input.gamepad.connected', disabled: 'plugin.input.gamepad.disconnected'} },
-          TNK: {switchable: false, state: false, message: 'tankControl'},
-          DLK: {switchable: false, state: false, message: 'rovpilot.depthHold'},
-          HLK: {switchable: false, state: false, message: 'rovpilot.headingHold'},
+          TNK: {switchable: false, state: false, message: 'plugin.tankControl'},
+          DLK: {switchable: false, state: false, message: 'plugin.rovpilot.depthHold'},
+          HLK: {switchable: false, state: false, message: 'plugin.rovpilot.headingHold'},
           LSR: {switchable: false, state: false, message: 'plugin.laser' },
           LED: {switchable: false, state: false},
-          ESC: {switchable: false, state: true, message: 'rovpilot.esc' }
+          ESC: {switchable: false, state: true, message: 'plugin.rovpilot.esc' }
         },
         update: function() {
           for (var aSwitch in this.switches) {
