--- a/src/ui-plugins/standard/public/standard-ui.html
+++ b/src/ui-plugins/standard/public/standard-ui.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/themes/OpenROV/css/style.css">
 
-    <div class="navbar navbar-inverse navbar-fixed-top nav-collapse">
+    <div id="header" class="navbar navbar-inverse navbar-fixed-top nav-collapse">
       <div class="navbar-inner">
         <a class="brand" href="#"><img src="../../themes/OpenROV/img/openrov.png" class="logo"/><span class="navbar-titel">Cockpit</span></a>
         <ul class="nav" id="navtoolbar">
