Making size adjusting

--- a/src/ui-plugins/new-ui/public/depth.html
+++ b/src/ui-plugins/new-ui/public/depth.html
@@ -5,10 +5,12 @@
 
       .unit { font-size: 0.95em; }
       .text-center { text-align: center;}
-      #depthContainer { width: 100%;
-      margin-bottom: -18px}
+      #depthContainer {
+        width: 100%;
+        margin-bottom: -1.3vw;
+      }
       #depth {
-        font-size: 2.9em;
+        font-size: 2.1vw;
         font-weight: bold;
       }
       .depth-line-container,
