--- a/src/ui-plugins/new-ui/public/power.html
+++ b/src/ui-plugins/new-ui/public/power.html
@@ -3,9 +3,13 @@
   <template>
     <style type="text/css">
 
-      svg { width: 100%; }
+      svg {
+        width: 100%;
+        margin-bottom: -0.6vw;
+      }
+
     </style>
-    <div id="depthContainer">
+    <div id="batteryContainer">
       <svg id="svg2" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 95" height="100%" width="100%" version="1.1" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/">
         <metadata id="metadata7">
           <rdf:RDF>
