--- a/src/ui-plugins/new-ui/public/time.html
+++ b/src/ui-plugins/new-ui/public/time.html
@@ -18,7 +18,7 @@
       #time-container #time,
       #time-container #runtime
       {
-        font-size: 2em;
+        font-size: 1.6vw;
       }
       .line-cell {
         display: table-cell;
