--- a/src/plugins/ui-selector/public/settings.html
+++ b/src/plugins/ui-selector/public/settings.html
@@ -12,8 +12,7 @@
           <label for="UIs">Select a UI:</label>
           <select id="UIs" data-bind="options: availableUIs,
                        optionsText: 'viewName',
-                       value: selectedUi,
-                       optionsCaption: 'Choose...'"></select>
+                       value: selectedUi"></select>
           <button data-bind="click: apply">Apply</button>
         </div>
       </div>
