--- a/src/ui-plugins/standard/public/standard-ui.html
+++ b/src/ui-plugins/standard/public/standard-ui.html
@@ -1,5 +1,6 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
-<link rel="import" href="../../webcomponents/video/video.html">
+<!--link rel="import" href="../../webcomponents/video/video.html"-->
+<link rel="import" href="/bower_components/mjpeg-video-webcomponents/mjpeg-video.html">
 <link rel="import" href="../../webcomponents/horizon/horizon.html">
 <link rel="import" href="../../webcomponents/settings/settings.html">
 <link rel="import" href="../../webcomponents/diagnostics/diagnostics.html">
@@ -47,9 +48,11 @@
     <div id="main-row" class="container-fluid full-height">
       <div class="row-fluid full-height">
         <div class="span9 border full-height" id="outter-videocontainer">
-          <div id="video-container" class="full-height center pagination-centered" border='1'>
-            <rov-video>
+          <div id="video-container1" class="full-height center pagination-centered" border='1'>
+    <!--        <rov-video>
             </rov-video>
+    -->
+            <mjpeg-video src='http://192.168.254.1:8090/?action=stream'  border='1' style='width: 100%; height:100%' menuState='on'></mjpeg-video>
             <video-compass></video-compass>
             <rov-horizon id="horizon"></rov-horizon>
 
