fix upgrade alert box close button

--- a/src/system-plugins/software-update-alert/public/ui-templates.html
+++ b/src/system-plugins/software-update-alert/public/ui-templates.html
@@ -1,5 +1,4 @@
-  <button type="button" class="close" onclick="$('#software-update-alert-container').addClass('hide
-')">&times;</button>
+  <button type="button" class="close" onclick="$('#software-update-alert-container').addClass('hide')">&times;</button>
   <strong>Software updates!</strong><br>
     The following components have updates:
   <ul data-bind="foreach: packages">
