Can run from relative path

--- a/src/static/webcomponents/diagnostics/diagnostics.html
+++ b/src/static/webcomponents/diagnostics/diagnostics.html
@@ -4,8 +4,8 @@
 
 <polymer-element name="rov-diagnostics" attributes="" >
   <template>
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/themes/OpenROV/css/style.css">
+    <link rel="stylesheet" href="../../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../themes/OpenROV/css/style.css">
 
     <style>
       #calibrations > a{
