--- a/src/static/webcomponents/drop-in-dialog/drop-in-dialog.html
+++ b/src/static/webcomponents/drop-in-dialog/drop-in-dialog.html
@@ -3,8 +3,8 @@
 <polymer-element name="drop-in-dialog" attributes="header, childId">
   <template>
 
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/themes/OpenROV/css/style.css">
+    <link rel="stylesheet" href="../../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../themes/OpenROV/css/style.css">
 
     <style>
       .contentContainer {
