--- a/src/static/webcomponents/telemetry.html
+++ b/src/static/webcomponents/telemetry.html
@@ -2,8 +2,8 @@
 
 <polymer-element name="telemetry-monitor" attributes="maxLines">
   <template>
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/themes/OpenROV/css/style.css">
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../themes/OpenROV/css/style.css">
     <style>
       .well {
         background-color: black;
