--- a/src/static/webcomponents/topdowncompass/topdowncompass.html
+++ b/src/static/webcomponents/topdowncompass/topdowncompass.html
@@ -2,7 +2,7 @@
 
 <polymer-element name="rov-topdowncompass">
   <template>
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../css/bootstrap.min.css">
     <link rel="stylesheet" href="css/topdowncompass.css">
 
     <style type="text/css">
