--- a/src/ui-plugins/standard/public/webcomponents/capestatus-footer.html
+++ b/src/ui-plugins/standard/public/webcomponents/capestatus-footer.html
@@ -4,8 +4,8 @@
 <polymer-element name="capestatus-footer" attributes="">
   <template>
 
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/themes/OpenROV/css/style.css">
+    <link rel="stylesheet" href="../../../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../../themes/OpenROV/css/style.css">
 
     <div class="container-fluid">
       <div class="span2 pull-right">
