--- a/src/ui-plugins/standard/public/webcomponents/gamepad.html
+++ b/src/ui-plugins/standard/public/webcomponents/gamepad.html
@@ -2,8 +2,8 @@
 <polymer-element name="rov-gamepad" attributes="">
   <template>
 
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/themes/OpenROV/css/style.css">
+    <link rel="stylesheet" href="../../../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../../themes/OpenROV/css/style.css">
 
     <style>
       .indicator {
@@ -21,7 +21,7 @@
 
     </style>
     <a href="/#" id="gamepad" class="{{ ! gamepadConected ? 'hidden' : '' }}">
-      <img id="gamepadPopover" src="/themes/OpenROV/img/gamepad.png" rel="popover">
+      <img id="gamepadPopover" src="../../../themes/OpenROV/img/gamepad.png" rel="popover">
     </a>
 
   </template>
