--- a/src/ui-plugins/standard/public/webcomponents/servo-tilt.html
+++ b/src/ui-plugins/standard/public/webcomponents/servo-tilt.html
@@ -2,8 +2,8 @@
 <polymer-element name="servo-tilt" attributes="">
   <template>
 
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/themes/OpenROV/css/style.css">
+    <link rel="stylesheet" href="../../../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../../themes/OpenROV/css/style.css">
 
     <style>
       img {
@@ -14,7 +14,7 @@
 
     <img
       id="servoTiltImage"
-      src="/themes/OpenROV/img/servo_tilt.png"
+      src="../../../themes/OpenROV/img/servo_tilt.png"
       style="
         -webkit-transform: rotate( {{servoAngle }}deg);
         -moz-transform: rotate( {{servoAngle }}deg);
