--- a/src/ui-plugins/standard/public/webcomponents/thrustfactor.html
+++ b/src/ui-plugins/standard/public/webcomponents/thrustfactor.html
@@ -2,8 +2,8 @@
 <polymer-element name="rov-thrustfactor" attributes="">
   <template>
 
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/themes/OpenROV/css/style.css">
+    <link rel="stylesheet" href="../../../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../../themes/OpenROV/css/style.css">
 
     <style>
       .label.badge {
