--- a/src/static/webcomponents/video/video.html
+++ b/src/static/webcomponents/video/video.html
@@ -2,8 +2,8 @@
 
 <polymer-element name="rov-video">
   <template>
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/themes/OpenROV/css/style.css">
+    <link rel="stylesheet" href="../../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../themes/OpenROV/css/style.css">
 
     <style type="text/css">
       #container {
