--- a/src/ui-plugins/standard/public/webcomponents/brightness-indicator.html
+++ b/src/ui-plugins/standard/public/webcomponents/brightness-indicator.html
@@ -2,8 +2,8 @@
 <polymer-element name="brightness-indicator" attributes="">
   <template>
 
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/themes/OpenROV/css/style.css">
+    <link rel="stylesheet" href="../../../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../../themes/OpenROV/css/style.css">
 
     <style>
     </style>
