--- a/src/ui-plugins/standard/public/webcomponents/connection-health.html
+++ b/src/ui-plugins/standard/public/webcomponents/connection-health.html
@@ -2,8 +2,8 @@
 <polymer-element name="connection-health" attributes="">
   <template>
 
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/themes/OpenROV/css/style.css">
+    <link rel="stylesheet" href="../../../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../../themes/OpenROV/css/style.css">
 
     <style>
       #connectionHealth{
