--- a/src/ui-plugins/standard/public/webcomponents/holds.html
+++ b/src/ui-plugins/standard/public/webcomponents/holds.html
@@ -2,8 +2,8 @@
 <polymer-element name="rov-depth-and-heading-hold" attributes="">
   <template>
 
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/themes/OpenROV/css/style.css">
+    <link rel="stylesheet" href="../../../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../../themes/OpenROV/css/style.css">
 
     <style>
       .indicator {
