Fixed menu heading in relative urls

--- a/src/ui-plugins/standard/public/standard-ui.html
+++ b/src/ui-plugins/standard/public/standard-ui.html
@@ -28,8 +28,8 @@
       <div class="navbar-inner">
         <a class="brand" href="#"><img src="../../themes/OpenROV/img/openrov.png" class="logo"/><span class="navbar-titel">Cockpit</span></a>
         <ul class="nav" id="navtoolbar">
-          <li><a href="/#"><img id="keyboardpopover" src="../../themes/OpenROV/img/keyboard.png" data-trigger="hover" data-placement="bottom" rel='popover' title="keyboard commands" html="true" /></a></li>
-          <li><a href="/#" id="servoTilt"><servo-tilt class="pull-left"></servo-tilt></a></li>
+          <li><a href="#"><img id="keyboardpopover" src="../../themes/OpenROV/img/keyboard.png" data-trigger="hover" data-placement="bottom" rel='popover' title="keyboard commands" html="true" /></a></li>
+          <li><a href="#" id="servoTilt"><servo-tilt class="pull-left"></servo-tilt></a></li>
           <li><brightness-indicator  class="pull-left"></brightness-indicator></li>
           <li><rov-gamepad class="pull-left"></rov-gamepad></li>
           <li><rov-lasers class="pull-left"></rov-lasers></li>
@@ -37,8 +37,8 @@
         </ul>
 
         <rov-menu id="menuitems" class="nav pull-right">
-          <li><a href="/#" id="show-settings" onclick="document.querySelector('html /deep/ rov-settings').open();">Settings</a></li>
-          <li><a href="/#" id="show-diagnostic" onclick="document.querySelector('html /deep/ rov-diagnostics').open();" >Diagnostic</a></li>
+          <li><a href="#" id="show-settings" onclick="document.querySelector('html /deep/ rov-settings').open();">Settings</a></li>
+          <li><a href="#" id="show-diagnostic" onclick="document.querySelector('html /deep/ rov-diagnostics').open();" >Diagnostic</a></li>
         </rov-menu>
 
       </div>
