--- a/src/ui-plugins/standard/public/webcomponents/holds.html
+++ b/src/ui-plugins/standard/public/webcomponents/holds.html
@@ -57,10 +57,10 @@
     <ul class="nav">
       <li id="rovPilot_holdLabel"><span>Hold:</span></li>
       <li>
-        <a href="/#" on-click="{{ toggleDepthHold }}" id="depthHold" class="{{ depthHoldEnabled | isEnabled }} indicator">Depth</a>
+        <a href="#" on-click="{{ toggleDepthHold }}" id="depthHold" class="{{ depthHoldEnabled | isEnabled }} indicator">Depth</a>
       </li>
       <li>
-        <a href="/#" on-click="{{ toggleHeadingHold }}" id="headingHold" class="{{ headingHoldEnabled | isEnabled }} indicator">Heading</a>
+        <a href="#" on-click="{{ toggleHeadingHold }}" id="headingHold" class="{{ headingHoldEnabled | isEnabled }} indicator">Heading</a>
       </li>
     </ul>
 
