--- a/src/ui-plugins/standard/public/webcomponents/lasers.html
+++ b/src/ui-plugins/standard/public/webcomponents/lasers.html
@@ -36,7 +36,7 @@
       }
     </style>
 
-    <a href="/#" on-click="{{ toggle }}" class="indicator {{ lasersEnabled ? 'enabled' : '' }}" id="laser" class="indicator">
+    <a href="#" on-click="{{ toggle }}" class="indicator {{ lasersEnabled ? 'enabled' : '' }}" id="laser" class="indicator">
       <div id="laserIcon"></div>
     </a>
 
